# desk2ha-agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  config.toml  desk2ha-agent.spec  pyproject.toml
.githooks/: pre-commit
.github/workflows/: build-installers.yml  ci.yml  release-readiness.yml  release.yml
desk2ha_agent/: __init__.py  __main__.py  config.py  peripheral_db.py  plugin_registry.py  scheduler.py  state.py
desk2ha_agent/collector/: __init__.py  base.py
desk2ha_agent/collector/generic/: __init__.py  ble_battery.py  bluetooth_peripheral.py  ddcci.py  headsetcontrol.py  hid_battery.py  keyboard_backlight.py  network.py  usb_devices.py  usb_pd.py  uvc.py  wireless_receiver.py
desk2ha_agent/collector/platform/: __init__.py  linux.py  macos.py  windows.py
desk2ha_agent/helper/: __init__.py  __main__.py  client.py  registry.py  server.py
desk2ha_agent/images/: __init__.py  device_icons.py  vendor_icons.py
desk2ha_agent/lifecycle/: __init__.py  config_api.py  kvm_diagnose.py  phone_home.py  policy.py  self_update.py  service_manager.py  system_actions.py  usb_watchdog.py  version_check.py
desk2ha_agent/setup_wizard/: __init__.py  server.py
desk2ha_agent/transport/: __init__.py  base.py  http.py  mqtt.py  zeroconf.py
desk2ha_agent/tray/: __init__.py  tray_helper.py
docs/: prometheus.md
examples/: full-config.toml  minimal-config.toml
scripts/: generate-models.sh  generate-release-notes.py  install-helper-service.ps1  install-service.ps1  lint.sh  predeploy.sh  publish.sh  release.sh
tests/: conftest.py
tests/unit/: test_config.py  test_main.py  test_plugin_registry.py  test_scheduler.py  test_state.py
tests/unit/collector/: test_base.py  test_ble_battery.py  test_bluetooth_peripheral.py  test_corsair_icue.py  test_ddcci.py  test_dell_dcm.py  test_dell_peripheral.py  test_dell_webcam.py  test_headsetcontrol.py  test_hid_battery.py  (+7 more)
tools/: capture_ddpm.ps1  deploy-agent.ps1  hid_sniffer.py  kvm_diagnose.py  service-health.py  setup-helper-task.ps1
(+12 files in other folders)
